sandbox-codebase/objects/mone__Mailchimp_Email_Activity__c/mone__Mailchimp_Email_Activity__c.object-meta.xml
<CustomObject>
    <description>List of members&apos; subscriber activity in a specific campaign. This includes opens, clicks etc, and the date and time they occurred.</description>
    <label>Mailchimp Email Activity</label>
    <nameField>
        <label>Mailchimp Email Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mailchimp Email Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>