sandbox-codebase/objects/mone__Mailchimp_Email_Activity__c/fields/mone__Action__c.field-meta.xml
<CustomField>
    <fullName>mone__Action__c</fullName>
    <inlineHelpText>Mailchimp activity types for tracking different user interactions with your campaigns.</inlineHelpText>
    <label>Action</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>open</fullName>
            </value>
            <value>
                <fullName>click</fullName>
            </value>
            <value>
                <fullName>bounce</fullName>
            </value>
            <value>
                <fullName>hard</fullName>
            </value>
            <value>
                <fullName>soft</fullName>
            </value>
            <value>
                <fullName>complaint</fullName>
            </value>
            <value>
                <fullName>unsubscribed</fullName>
            </value>
            <value>
                <fullName>abuse</fullName>
            </value>
            <value>
                <fullName>sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>