sandbox-codebase/objects/mone__Mailchimp_Email_Activity__c/fields/mone__Activity_URL__c.field-meta.xml
<CustomField>
    <fullName>mone__Activity_URL__c</fullName>
    <inlineHelpText>Contains the URL clicked by the subscriber.</inlineHelpText>
    <label>Activity URL</label>
    <type>Url</type>
</CustomField>