sandbox-codebase/objects/mone__Mailchimp_Email_Activity__c/fields/mone__Avatar_Url__c.field-meta.xml
<CustomField>
    <fullName>mone__Avatar_Url__c</fullName>
    <inlineHelpText>The gravatar URL of the contact who sent the reply.</inlineHelpText>
    <label>Avatar Url</label>
    <type>Url</type>
</CustomField>