sandbox-codebase/objects/mone__Mailchimp_Email_Activity__c/fields/mone__Bounce_Has_Open_Activity__c.field-meta.xml
<CustomField>
    <fullName>mone__Bounce_Has_Open_Activity__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if the email associated with this bounce also has open activity on the same campaign.</inlineHelpText>
    <label>Bounce Has Open Activity</label>
    <type>Checkbox</type>
</CustomField>