sandbox-codebase/objects/mone__Mailchimp_Email_Activity__c/fields/mone__Bounce_Type__c.field-meta.xml
<CustomField>
    <fullName>mone__Bounce_Type__c</fullName>
    <inlineHelpText>The type of bounce. Possible values: &quot;hard&quot; or &quot;soft&quot;.</inlineHelpText>
    <label>Bounce Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>