sandbox-codebase/objects/mone__Mailchimp_Email_Activity__c/fields/mone__Campaign_Id__c.field-meta.xml
<CustomField>
    <fullName>mone__Campaign_Id__c</fullName>
    <label>Campaign Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>