sandbox-codebase/objects/mone__Mailchimp_Email_Activity__c/fields/mone__Created_By__c.field-meta.xml
<CustomField>
    <fullName>mone__Created_By__c</fullName>
    <inlineHelpText>The username of the person who created this event.</inlineHelpText>
    <label>Created By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>