sandbox-codebase/objects/mone__Mailchimp_Email_Activity__c/fields/mone__Event_Name__c.field-meta.xml
<CustomField>
    <fullName>mone__Event_Name__c</fullName>
    <inlineHelpText>The name of the event.</inlineHelpText>
    <label>Event Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>