sandbox-codebase/objects/mone__Mailchimp_Email_Activity__c/fields/mone__Event_Properties__c.field-meta.xml
<CustomField>
    <fullName>mone__Event_Properties__c</fullName>
    <inlineHelpText>An arbitrary datastore containing properties for the given event.</inlineHelpText>
    <label>Event Properties</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-- None --</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>