sandbox-codebase/objects/mone__Mailchimp_Email_Activity__c/fields/mone__From_Email__c.field-meta.xml
<CustomField>
    <fullName>mone__From_Email__c</fullName>
    <inlineHelpText>The email of the contact who sent the reply.</inlineHelpText>
    <label>From Email</label>
    <type>Email</type>
</CustomField>