sandbox-codebase/objects/mone__Mailchimp_Email_Activity__c/fields/mone__Has_Read__c.field-meta.xml
<CustomField>
    <fullName>mone__Has_Read__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates that the message has been read.</inlineHelpText>
    <label>Has Read</label>
    <type>Checkbox</type>
</CustomField>