sandbox-codebase/objects/mone__Mailchimp_Email_Activity__c/fields/mone__IP_Address__c.field-meta.xml
<CustomField>
    <fullName>mone__IP_Address__c</fullName>
    <inlineHelpText>The IP Address of the user where they interacted with the email.</inlineHelpText>
    <label>IP Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>