sandbox-codebase/objects/mone__Mailchimp_Email_Activity__c/fields/mone__Is_Admin_Unsubscribed__c.field-meta.xml
<CustomField>
    <fullName>mone__Is_Admin_Unsubscribed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if an admin unsubscribed a contact.</inlineHelpText>
    <label>Is Admin Unsubscribed</label>
    <type>Checkbox</type>
</CustomField>