sandbox-codebase/objects/mone__Mailchimp_Email_Activity__c/fields/mone__Is_User__c.field-meta.xml
<CustomField>
    <fullName>mone__Is_User__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates that the message created by a user (as opposed to a contact).</inlineHelpText>
    <label>Is User</label>
    <type>Checkbox</type>
</CustomField>