sandbox-codebase/objects/mone__Mailchimp_Email_Activity__c/fields/mone__Link_Clicked__c.field-meta.xml
<CustomField>
    <fullName>mone__Link_Clicked__c</fullName>
    <inlineHelpText>The URL of the link that was clicked.</inlineHelpText>
    <label>Link Clicked</label>
    <type>Url</type>
</CustomField>