sandbox-codebase/objects/mone__Mailchimp_Email_Activity__c/fields/mone__Mailchimp_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>mone__Mailchimp_Account_Id__c</fullName>
    <description>Contains the Mailchimp Account Id. Makes it easier to establish lookups in Apex.</description>
    <inlineHelpText>Internal use.</inlineHelpText>
    <label>Mailchimp Account Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>