sandbox-codebase/objects/mone__Mailchimp_Email_Activity__c/fields/mone__Mailchimp_List__c.field-meta.xml
<CustomField>
    <fullName>mone__Mailchimp_List__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Lookup to the Mailchimp list for this activity.</inlineHelpText>
    <label>Mailchimp List</label>
    <referenceTo>mone__Mailchimp_List__c</referenceTo>
    <relationshipLabel>Mailchimp Email Activities</relationshipLabel>
    <relationshipName>Mailchimp_Email_Activities</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>