sandbox-codebase/objects/mone__Mailchimp_Email_Activity__c/fields/mone__Mailchimp_Member__c.field-meta.xml
<CustomField>
    <fullName>mone__Mailchimp_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup to the Mailchimp Member.</inlineHelpText>
    <label>Mailchimp Member</label>
    <referenceTo>mone__Mailchimp_Member__c</referenceTo>
    <relationshipLabel>Mailchimp Email Activities</relationshipLabel>
    <relationshipName>Mailchimp_Email_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>