sandbox-codebase/objects/mone__Mailchimp_Email_Activity__c/fields/mone__Marketing_Permission_Opted_In__c.field-meta.xml
<CustomField>
    <fullName>mone__Marketing_Permission_Opted_In__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if the marketing permission is enabled or not.</inlineHelpText>
    <label>Marketing Permission Opted In</label>
    <type>Checkbox</type>
</CustomField>