sandbox-codebase/objects/mone__Mailchimp_Email_Activity__c/fields/mone__Marketing_Permisson_Text__c.field-meta.xml
<CustomField>
    <fullName>mone__Marketing_Permisson_Text__c</fullName>
    <inlineHelpText>The text describing this marketing permission.</inlineHelpText>
    <label>Marketing Permisson Text</label>
    <type>TextArea</type>
</CustomField>