sandbox-codebase/objects/mone__Mailchimp_Email_Activity__c/fields/mone__Message_Text__c.field-meta.xml
<CustomField>
    <fullName>mone__Message_Text__c</fullName>
    <inlineHelpText>The body of the message in this conversation.</inlineHelpText>
    <label>Message Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>