sandbox-codebase/objects/mone__Mailchimp_Email_Activity__c/fields/mone__Note_Id__c.field-meta.xml
<CustomField>
    <fullName>mone__Note_Id__c</fullName>
    <inlineHelpText>The note&apos;s unique id.</inlineHelpText>
    <label>Note Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>