sandbox-codebase/objects/mone__Mailchimp_Email_Activity__c/fields/mone__Note_Text__c.field-meta.xml
<CustomField>
    <fullName>mone__Note_Text__c</fullName>
    <inlineHelpText>The note&apos;s text.</inlineHelpText>
    <label>Note Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>