sandbox-codebase/objects/mone__Mailchimp_Email_Activity__c/fields/mone__Order_Id__c.field-meta.xml
<CustomField>
    <fullName>mone__Order_Id__c</fullName>
    <inlineHelpText>The unique order id.</inlineHelpText>
    <label>Order Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>