sandbox-codebase/objects/mone__Mailchimp_Email_Activity__c/fields/mone__Order_Total__c.field-meta.xml
<CustomField>
    <fullName>mone__Order_Total__c</fullName>
    <inlineHelpText>The order total formatted as a string.</inlineHelpText>
    <label>Order Total</label>
    <length>255</length>
    <type>Text</type>
</CustomField>