sandbox-codebase/objects/mone__Mailchimp_Email_Activity__c/fields/mone__Order_Url__c.field-meta.xml
<CustomField>
    <fullName>mone__Order_Url__c</fullName>
    <inlineHelpText>The order URL.</inlineHelpText>
    <label>Order Url</label>
    <type>Url</type>
</CustomField>