sandbox-codebase/objects/mone__Mailchimp_Email_Activity__c/fields/mone__Outreach_Id__c.field-meta.xml
<CustomField>
    <fullName>mone__Outreach_Id__c</fullName>
    <inlineHelpText>The outreach&apos;s unique id.</inlineHelpText>
    <label>Outreach Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>