sandbox-codebase/objects/mone__Mailchimp_Email_Activity__c/fields/mone__Outreach_Title__c.field-meta.xml
<CustomField>
    <fullName>mone__Outreach_Title__c</fullName>
    <inlineHelpText>The title of the outreach.</inlineHelpText>
    <label>Outreach Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>