sandbox-codebase/objects/mone__Mailchimp_Email_Activity__c/fields/mone__Signup_Category__c.field-meta.xml
<CustomField>
    <fullName>mone__Signup_Category__c</fullName>
    <inlineHelpText>How was this user added to the list.</inlineHelpText>
    <label>Signup Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>