sandbox-codebase/objects/mone__Mailchimp_Email_Activity__c/fields/mone__Store_Name__c.field-meta.xml
<CustomField>
    <fullName>mone__Store_Name__c</fullName>
    <inlineHelpText>The name of the store (for an eCommerce signup).</inlineHelpText>
    <label>Store Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>