sandbox-codebase/objects/mone__Mailchimp_Email_Activity__c/fields/mone__Survey_Id__c.field-meta.xml
<CustomField>
    <fullName>mone__Survey_Id__c</fullName>
    <inlineHelpText>The survey&apos;s unique id.</inlineHelpText>
    <label>Survey Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>