sandbox-codebase/objects/mone__Mailchimp_Email_Activity__c/fields/mone__Survey_Title__c.field-meta.xml
<CustomField>
    <fullName>mone__Survey_Title__c</fullName>
    <inlineHelpText>The title of the survey.</inlineHelpText>
    <label>Survey Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>