sandbox-codebase/objects/mone__Mailchimp_Email_Activity__c/fields/mone__Thread_Id__c.field-meta.xml
<CustomField>
    <fullName>mone__Thread_Id__c</fullName>
    <inlineHelpText>The thread&apos;s unique id of the conversation referenced in this event.</inlineHelpText>
    <label>Thread Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>