sandbox-codebase/objects/mone__Mailchimp_Email_Activity__c/fields/mone__Timestamp__c.field-meta.xml
<CustomField>
    <fullName>mone__Timestamp__c</fullName>
    <inlineHelpText>Date and time the email activity occurred.</inlineHelpText>
    <label>Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>