sandbox-codebase/objects/mone__Mailchimp_Email_Activity__c/fields/mone__Unsubscribe_Reason__c.field-meta.xml
<CustomField>
    <fullName>mone__Unsubscribe_Reason__c</fullName>
    <inlineHelpText>Indicates the reason that the contact was unsubscribed.</inlineHelpText>
    <label>Unsubscribe Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>