sandbox-codebase/objects/mone__Mailchimp_Email_Activity__c/fields/mone__Updated_At_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>mone__Updated_At_Timestamp__c</fullName>
    <inlineHelpText>The updated at timestamp in ISO8601 (for a Note).</inlineHelpText>
    <label>Updated At Timestamp</label>
    <type>DateTime</type>
</CustomField>