sandbox-codebase/objects/mone__Mailchimp_Email_Activity__c/fields/mone__Updated_By__c.field-meta.xml
<CustomField>
    <fullName>mone__Updated_By__c</fullName>
    <inlineHelpText>The name of the contact who updated this permission.</inlineHelpText>
    <label>Updated By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>